--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -26,22 +26,22 @@ cookie.seconds=172800
 
 system.root=app
 
-#通用报表模块
-#isRestart表示通用报表为执行状态的任务是否随Tomcat重启线程,重新开启<yes:是/no:否>. 注：部署线上设置为yes, 本机设置为no
+#\u901a\u7528\u62a5\u8868\u6a21\u5757
+#isRestart\u8868\u793a\u901a\u7528\u62a5\u8868\u4e3a\u6267\u884c\u72b6\u6001\u7684\u4efb\u52a1\u662f\u5426\u968fTomcat\u91cd\u542f\u7ebf\u7a0b,\u91cd\u65b0\u5f00\u542f<yes:\u662f/no:\u5426>. \u6ce8\uff1a\u90e8\u7f72\u7ebf\u4e0a\u8bbe\u7f6e\u4e3ayes, \u672c\u673a\u8bbe\u7f6e\u4e3ano
 isRestart=no
 
-#反馈学习启动按钮<yes:启动/no:关闭 > 注：部署线上设置为yes, 本机设置为no
+#\u53cd\u9988\u5b66\u4e60\u542f\u52a8\u6309\u94ae<yes:\u542f\u52a8/no:\u5173\u95ed > \u6ce8\uff1a\u90e8\u7f72\u7ebf\u4e0a\u8bbe\u7f6e\u4e3ayes, \u672c\u673a\u8bbe\u7f6e\u4e3ano
 fbl=no
 
 regress.phone=15806108888
-regress.service=\u57FA\u91D1
-regress.channel=\u7535\u4FE1\u884C\u4E1A->\u7535\u4FE1\u96C6\u56E2->4G\u4E1A\u52A1\u5BA2\u670D\u5E94\u7528
+regress.service=\u57fa\u91d1
+regress.channel=\u7535\u4fe1\u884c\u4e1a->\u7535\u4fe1\u96c6\u56e2->4G\u4e1a\u52a1\u5ba2\u670d\u5e94\u7528
 regress.range =noall
 resressqueryreadby=txt
 regressqueryreadencoding=GBK
 regressqueryservicetype=sys
 oracleconectionfrom=shhteleold
-AutoGenerateWordpat=\u670D\u52A1\u4E0E\u4E1A\u52A1\u8303\u56F4\u5BF9\u5E94\u5173\u7CFB\u914D\u7F6E
+AutoGenerateWordpat=\u670d\u52a1\u4e0e\u4e1a\u52a1\u8303\u56f4\u5bf9\u5e94\u5173\u7cfb\u914d\u7f6e
 home=/login/login.jsp
 isInsertIntoServiceid_brand=yes
 isInsertIntoKbdataid_brand=yes
